intTests/test_type_errors/err032.saw
//
// Too many arguments for type constructor: Int
//

let x : Int Bool = false;



